test/e2e/fail_compile/type_errors/runtime_join_demotion.cst
runtime fn source() -> num {
    2
}

fn main() -> num {
    if true { 1 } else { source() }
}
